--- a/css/radio-recorder.css
+++ b/css/radio-recorder.css
@@ -11,7 +11,7 @@
     justify-items: center;
 }
 
-.wrapper-radio-recorder  .container-radio-recorder {
+.wrapper-radio-recorder .container-radio-recorder {
     --height-lichaam: 12em;
     --width-lichaam: 30em;
     --width-border: .1em;
@@ -20,11 +20,11 @@
 
     width: var(--width-lichaam);
     height: calc(var(--height-lichaam) + var(--height-been));
-    
+
     z-index: 100;
 }
 
-.wrapper-radio-recorder  .lichaam {
+.wrapper-radio-recorder .lichaam {
     background-color: var(--accent-color-4);
     border: solid var(--width-border) var(--border-color);
     border-radius: 1em;
@@ -36,7 +36,7 @@
     position: relative;
 }
 
-.wrapper-radio-recorder  .handvat {
+.wrapper-radio-recorder .handvat {
     width: 20em;
     height: 2.2em;
     border: solid var(--width-border) var(--border-color);
@@ -46,7 +46,7 @@
     top: calc(-2.1em - var(--width-border));
 }
 
-.wrapper-radio-recorder  .antenne {
+.wrapper-radio-recorder .antenne {
     height: 8em;
     border: solid .05em var(--border-color);
     position: absolute;
@@ -55,7 +55,7 @@
     transform: rotate(24deg);
 }
 
-.wrapper-radio-recorder  .ogen {
+.wrapper-radio-recorder .ogen {
     top: 0;
     display: flex;
     position: absolute;
@@ -63,32 +63,28 @@
     z-index: 1;
 }
 
-.wrapper-radio-recorder   .oog {
-width: 3.4em;
-height: 6em;
-border-radius: 50%;
-border: solid var(--width-border) var(--border-color);
-background-color: var(--text-color-1);
-background-image: 
-radial-gradient(
-    transparent 40%, 
-    white 40%
-    ), 
-conic-gradient(
-    from -90deg at 60% 40%, 
-    black 92%, 
-    transparent 92%
-    );
+.wrapper-radio-recorder .oog {
+    width: 3.4em;
+    height: 6em;
+    border-radius: 50%;
+    border: solid var(--width-border) var(--border-color);
+    background-color: var(--text-color-1);
+    background-image:
+        radial-gradient(transparent 40%,
+            white 40%),
+        conic-gradient(from -90deg at 60% 40%,
+            black 92%,
+            transparent 92%);
 }
 
-.wrapper-radio-recorder   .radio-equipment {
+.wrapper-radio-recorder .radio-equipment {
     width: var(--width-lichaam);
     height: var(--height-lichaam);
     display: flex;
     flex-direction: column;
 }
 
-.wrapper-radio-recorder  .bovenkant-radio {
+.wrapper-radio-recorder .bovenkant-radio {
     width: 100%;
     height: 25%;
     display: flex;
@@ -96,7 +92,7 @@ conic-gradient(
     align-items: center;
 }
 
-.wrapper-radio-recorder  .onderkant-radio {
+.wrapper-radio-recorder .onderkant-radio {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -104,7 +100,7 @@ conic-gradient(
     height: 75%;
 }
 
-.wrapper-radio-recorder  .disc {
+.wrapper-radio-recorder .disc {
     width: 16em;
     height: 1.6em;
     border: solid var(--width-border) var(--border-color);
@@ -115,19 +111,19 @@ conic-gradient(
     align-items: center;
 }
 
-.wrapper-radio-recorder  .disc hr {
+.wrapper-radio-recorder .disc hr {
     border: solid .05em var(--border-color);
     width: 94%;
 }
 
-.wrapper-radio-recorder  .knoppen {
+.wrapper-radio-recorder .knoppen {
     display: flex;
     right: 1em;
     top: .5em;
     position: absolute;
 }
 
-.wrapper-radio-recorder  .knoppen li {
+.wrapper-radio-recorder .knoppen li {
     width: 1em;
     aspect-ratio: 1/1;
     background-color: var(--accent-color-3);
@@ -137,7 +133,7 @@ conic-gradient(
     margin: .2em;
 }
 
-.wrapper-radio-recorder  .casette {
+.wrapper-radio-recorder .casette {
     width: 6em;
     height: 7em;
     border: solid var(--width-border) var(--border-color);
@@ -145,7 +141,7 @@ conic-gradient(
     border-radius: .5em;
 }
 
-.wrapper-radio-recorder  .stereo {
+.wrapper-radio-recorder .stereo {
     width: 8em;
     height: 5em;
     border: solid var(--width-border) var(--border-color);
@@ -153,7 +149,7 @@ conic-gradient(
     border-radius: .5em;
 }
 
-.wrapper-radio-recorder  .been {
+.wrapper-radio-recorder .been {
     background-color: var(--accent-color-3);
     height: 6em;
     width: 1.6em;
@@ -165,15 +161,15 @@ conic-gradient(
     align-items: flex-end;
 }
 
-.wrapper-radio-recorder  .been.links {
+.wrapper-radio-recorder .been.links {
     left: calc(55% - var(--width-border));
 }
 
-.wrapper-radio-recorder  .been.rechts {
+.wrapper-radio-recorder .been.rechts {
     right: calc(55% - var(--width-border));
 }
 
-.wrapper-radio-recorder  .sok {
+.wrapper-radio-recorder .sok {
     width: 2em;
     height: 1em;
     background-color: var(--accent-color-4);
@@ -182,7 +178,7 @@ conic-gradient(
     position: absolute;
 }
 
-.wrapper-radio-recorder  .schoen {
+.wrapper-radio-recorder .schoen {
     background-color: var(--accent-color-1);
     width: 5em;
     height: 1.4em;
@@ -194,15 +190,15 @@ conic-gradient(
     justify-content: center;
 }
 
-.wrapper-radio-recorder  .schoen.links {
+.wrapper-radio-recorder .schoen.links {
     left: 0;
 }
 
-.wrapper-radio-recorder  .schoen.rechts {
+.wrapper-radio-recorder .schoen.rechts {
     right: 0;
 }
 
-.wrapper-radio-recorder  .box {
+.wrapper-radio-recorder .box {
     width: 2em;
     height: 1em;
     background-color: var(--accent-color-1);
@@ -214,15 +210,15 @@ conic-gradient(
     top: -1em;
 }
 
-.wrapper-radio-recorder  .box.links {
+.wrapper-radio-recorder .box.links {
     right: -0.05em;
 }
 
-.wrapper-radio-recorder  .box.rechts {
+.wrapper-radio-recorder .box.rechts {
     left: -0.05em;
 }
 
-.wrapper-radio-recorder  .zool {
+.wrapper-radio-recorder .zool {
     width: 4.6em;
     height: .6em;
     background-color: var(--accent-color-4);
@@ -232,7 +228,7 @@ conic-gradient(
     bottom: -.6em;
 }
 
-.wrapper-radio-recorder  .schaduw {
+.wrapper-radio-recorder .schaduw {
     width: 48em;
     height: 16em;
     border-radius: 50%;
@@ -241,7 +237,7 @@ conic-gradient(
     z-index: -2;
 }
 
-.wrapper-radio-recorder  #tweede-titel {
+.wrapper-radio-recorder #tweede-titel {
     color: var(--text-color-1);
     font-family: 'Cartoonist';
     font-size: 6em;
