--- a/css/mp3-player.css
+++ b/css/mp3-player.css
@@ -4,9 +4,9 @@
 
 .wrapper-mp3-player {
     position: absolute;
-    left: 50%;
-    top: calc(50% + 4em);
-    transform: translate(-50%, -50%);
+    /* left: 50%; */
+    /* top: calc(50% + 4em); */
+    /* transform: translate(-50%, -50%); */
     display: grid;
     justify-items: center;
 }
@@ -165,34 +165,17 @@
 }
 
 .wrapper-mp3-player .oog {
-    border: solid var(--width-border) var(--border-color);
     width: 3.4em;
     height: 6em;
-    background-color: white;
     border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.wrapper-mp3-player .pupil {
-    width: 2em;
-    height: 4em;
-    border-radius: 50%;
+    border: solid var(--width-border) var(--border-color);
     background-color: var(--text-color-1);
     background-image:
+        radial-gradient(transparent 40%,
+            white 40%),
         conic-gradient(from -90deg at 60% 40%,
             black 92%,
             transparent 92%);
-}
-
-.wrapper-mp3-player .schaduw {
-    width: 48em;
-    height: 16em;
-    border-radius: 50%;
-    background-color: var(--shadow-color-1);
-    position: absolute;
-    z-index: -2;
 }
 
 .wrapper-mp3-player .zij-knop {
