--- a/css/cassette.css
+++ b/css/cassette.css
@@ -4,9 +4,9 @@
 
 .wrapper-cassette {
     position: absolute;
-    left: 50%;
-    top: calc(50% + 3em);
-    transform: translate(-50%, -50%);
+    /* left: 50%; */
+    /* top: calc(50% + 3em); */
+    /* transform: translate(-50%, -50%); */
     display: grid;
     justify-items: center;
 }
@@ -229,16 +229,6 @@
     border-radius: .2em;
     position: absolute;
     bottom: -.6em;
-}
-
-.wrapper-cassette .schaduw {
-    width: 48em;
-    height: 16em;
-    border-radius: 50%;
-    background-color: var(--shadow-color-3);
-    position: absolute;
-    z-index: -2;
-    top: 25%;
 }
 
 .wrapper-cassette #derde-titel {
