--- a/css/radio-recorder.css
+++ b/css/radio-recorder.css
@@ -4,9 +4,9 @@
 
 .wrapper-radio-recorder {
     position: absolute;
-    left: 50%;
-    top: calc(50% + 4em);
-    transform: translate(-50%, -50%);
+    /* left: 50%; */
+    /* top: calc(50% + 4em); */
+    /* transform: translate(-50%, -50%); */
     display: grid;
     justify-items: center;
 }
@@ -226,15 +226,6 @@
     border-radius: .2em;
     position: absolute;
     bottom: -.6em;
-}
-
-.wrapper-radio-recorder .schaduw {
-    width: 48em;
-    height: 16em;
-    border-radius: 50%;
-    background-color: var(--shadow-color-2);
-    position: absolute;
-    z-index: -2;
 }
 
 .wrapper-radio-recorder #tweede-titel {
