--- a/css/vinyl-record.css
+++ b/css/vinyl-record.css
@@ -4,9 +4,9 @@
 
 .wrapper-vinyl-record {
     position: absolute;
-    left: 50%;
-    top: calc(50% + 3em);
-    transform: translate(-50%, -50%);
+    /* left: 50%; */
+    /* top: calc(50% + 3em); */
+    /* transform: translate(-50%, -50%); */
     display: grid;
     justify-items: center;
 }
@@ -150,16 +150,6 @@
     border-radius: .2em;
     position: absolute;
     bottom: -.6em;
-}
-
-.wrapper-vinyl-record .schaduw {
-    width: 48em;
-    height: 16em;
-    border-radius: 50%;
-    background-color: var(--shadow-color-4);
-    position: absolute;
-    z-index: -2;
-    top: 25%;
 }
 
 .wrapper-vinyl-record #vierde-titel {
